# ResORR

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  environment_extended.yml  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/methods/: 01-Network-Generation-networkx.ipynb  02-Regulation-data-prep.ipynb  02-Regulation.ipynb  04-Regulation.ipynb
notebooks/: compare_results.ipynb  run_rat.ipynb
notebooks/.ipynb_checkpoints/: run_rat-checkpoint.ipynb
notebooks/methods/: 00-station-file-from-resopsus.ipynb  01-Network-Generation-networkx.ipynb  01-USGS-data-retrieval-1.ipynb  02-RAT-USGS.ipynb  02-Regulation-data-prep.ipynb  02-Regulation.ipynb  03-Run-RAT.ipynb  03-vic-calibration.ipynb  04-Exploring-SWORD-Database.ipynb  04-Regulation-added-noise-dels-gaussian-sample.ipynb  04-Regulation-added-noise-dels-gaussian.ipynb  04-Regulation-added-noise.ipynb  04-Regulation-obs-inflow.ipynb  04-Regulation.ipynb  05-Network-Generation.ipynb  06-1-Regulation-data-prep.ipynb  06-Network-Generation-networkx.ipynb  07-1-Regulation-rat.ipynb  07-Regulation-insitu.ipynb  07-Regulation.ipynb  08-in-situ-Data-Cleaning.ipynb  09-cumberland-watershed-delineation.ipynb  10-calculate-statistics.ipynb  11-satellite-dels.py  Exploring-SWORD-Database.ipynb  Network-Generation-networkx.ipynb  Network-Generation.ipynb  RAT-USGS.ipynb  Regulation.ipynb  USGS-data-retrieval-1.ipynb  run_rat.ipynb  vic-calibration.ipynb
src/: download_asset.py  rat_initialize.sh  run_model.py  run_rat.py  run_rat_script.py
src/resorr/: network.py  (+2 more)
tests/: test_cumberland.py
(+14 files in other folders)
